[package]
name = "flui-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for FLUI - Project creation, building, and deployment automation"
keywords = ["cli", "flui", "ui", "cross-platform", "build-tool"]
categories = ["command-line-utilities", "development-tools", "gui"]

[[bin]]
name = "flui"
path = "src/main.rs"

[dependencies]
# Build system
flui-build = { path = "../flui-build" }

# Logging
flui-log = { path = "../flui-log" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env", "color"] }
clap_complete = "4.5"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
toml = "0.9"

# Utilities
which = "8.0"
cliclack = "0.3.6"
console = "0.15"
dirs = "5.0"

# Async runtime (for flui-build async builders)
pollster = { workspace = true }

# File watching (hot reload)
notify-debouncer-mini = "0.5"

# Optional: DevTools integration
flui-devtools = { path = "../flui-devtools", optional = true }

[features]
default = []
devtools = ["dep:flui-devtools"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
