[package]
name = "flui-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for FLUI - Project creation, building, and deployment automation"
keywords = ["cli", "flui", "ui", "cross-platform", "build-tool"]
categories = ["command-line-utilities", "development-tools", "gui"]
# Single-binary integration-test consolidation: every root test file is a
# module of `tests/main.rs` (one link of the full dep stack instead of 5
# separate binaries). See the `[[test]] name = "cli_it"` target below.
autotests = false

[[bin]]
name = "flui"
path = "src/main.rs"

[dependencies]
# Build system
flui-build = { path = "../flui-build", version = "0.2.0" }
flui-hot-reload = { path = "../flui-hot-reload", version = "0.2.0", features = ["source-watch"] }

# Async runtime — `run` blocks on the async build/push pipeline via a
# multi-thread `Runtime`.
tokio = { workspace = true, features = ["rt-multi-thread"] }

# Logging (via flui_foundation::log — merged from flui-log in
# D-block PR-C-1 U2)
flui-foundation = { path = "../flui-foundation", version = "0.2.0" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env", "color"] }
clap_complete = "4.5"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
toml = "0.9"

# Utilities
which = "8.0"
cliclack = "0.3.6"
console = "0.15"
dirs = "5.0"

# Async runtime (for flui-build async builders)
pollster = { workspace = true }

# Optional: DevTools integration
flui-devtools = { path = "../flui-devtools", version = "0.2.0", optional = true }

[features]
default = []
devtools = ["dep:flui-devtools"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

# Consolidated integration-test binary (see `autotests = false` above).
# All five suites drive the built `flui` binary in subprocesses via
# assert_cmd; no test file writes process-global state in the test
# process itself, so no isolated [[test]] targets are needed.
[[test]]
name = "cli_it"
path = "tests/main.rs"

[lints]
workspace = true
