[package]
name = "flui-cupertino"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "iOS-style (Cupertino) theming foundation for FLUI — CupertinoDynamicColor, CupertinoTextTheme, CupertinoThemeData, and the CupertinoButton family"
repository.workspace = true
keywords = ["ui", "cupertino", "ios", "flutter", "flui"]
categories = ["gui"]

[dependencies]
# `View`/`InheritedView`/`impl_inherited_view!`/`BuildContext` — the
# element-tree primitives `CupertinoTheme` is built on, and the
# `InheritedTheme` trait it implements (Flutter parity: `Theme`/
# `CupertinoTheme` both implement it so a future capture/re-parent
# mechanism treats every ambient theme the same way).
flui-view = { path = "../flui-view", version = "0.2.0" }
# `MediaQuery`/`MediaQueryData::platform_brightness` (the brightness fallback
# root `CupertinoDynamicColor::resolve_from` reads when no `CupertinoTheme`
# ancestor sets one), `WidgetState`/`WidgetStateProperty`, `SizedBox`,
# `GestureDetector`, `FocusableActionDetector`-equivalent widgets, and
# `FadeTransition` — `CupertinoButton`'s press-opacity substrate.
# ADR-0028: this is the ONLY design-system-adjacent dependency allowed —
# never `flui-material`, and never `flui-objects`/`flui-rendering` directly
# (v1 composes existing `flui-widgets` widgets, it does not paint its own
# render objects).
flui-widgets = { path = "../flui-widgets", version = "0.2.0" }
# `Color`, `Brightness`, `TextStyle`/`FontWeight` — the value types every
# const table in this crate (`colors.rs`, `text_theme.rs`) is built from.
flui-types = { path = "../flui-types", version = "0.2.0" }
# `Listenable` — `CupertinoButton`'s press-opacity animation subscribes to
# its `AnimationController` the same way `flui-material`'s `InkWell` does.
flui-foundation = { path = "../flui-foundation", version = "0.2.0" }
# `AnimationController`/`Vsync`/`Curves` — `CupertinoButton`'s press-opacity
# fade (`kFadeOutDuration`/`kFadeInDuration`), registered on the ambient
# `VsyncScope` (`flui-widgets::animated`) exactly as `flui-material`'s
# `InkWell` registers its press-deactivation timer — see `button.rs`'s
# module doc.
flui-animation = { path = "../flui-animation", version = "0.2.0" }
# `FocusNode` — `CupertinoButton::focus_node`'s external-node pass-through
# (mirrors `flui-material`'s `InkWell::focus_node`).
flui-interaction = { path = "../flui-interaction", version = "0.2.0" }
tracing = { workspace = true }

[dev-dependencies]
flui-rendering = { path = "../flui-rendering", version = "0.2.0", features = ["testing"] }
flui-objects = { path = "../flui-objects", version = "0.2.0", features = ["testing"] }
flui-binding = { path = "../flui-binding", version = "0.2.0" }
flui-interaction = { path = "../flui-interaction", version = "0.2.0", features = ["testing"] }
parking_lot = { workspace = true }

[lints]
workspace = true
