[package]
name = "flui-devtools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Developer tools for FLUI - profiling, debugging, hot reload, and inspection"

[dependencies]

# Timing and performance (web-time is the maintained replacement for instant)
web-time = "1.1"

# Serialization (for devtools protocol)
serde = { workspace = true }
serde_json = { workspace = true }

# Hot reload support
notify = { version = "8.2", optional = true }

# Data structures
parking_lot = { workspace = true }

# Platform-specific (Windows memory info)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[features]
default = []

# === Core Features ===
# Performance profiling support
profiling = []

# Timeline/frame history tracking
timeline = []

# === Advanced Features ===
# Hot code reload for development
hot-reload = ["notify"]

# TODO: Add dependencies for these features:
# network-monitor = ["tokio", "tokio-tungstenite"]
# memory-profiler = ["dhat"]
# remote-debug = ["tokio", "tokio-tungstenite"]
# tracing-support = ["tracing-subscriber"]

# === Convenience Features ===
# Enable all features
full = [
    "profiling",
    "timeline",
    "hot-reload",
    # "network-monitor",
    # "memory-profiler",
    # "remote-debug",
    # "tracing-support",
]

[dev-dependencies]
criterion = { workspace = true }

# [[bench]]
# name = "profiler_bench"
# harness = false

flui-engine = { path = "../flui-engine" }
