[package]
name = "flui-devtools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Developer tools for FLUI - profiling, debugging, hot reload, and inspection"

[dependencies]

# Timing and performance (web-time is the maintained replacement for instant)
web-time = "1.1"

# Serialization (for devtools protocol)
serde = { workspace = true }
serde_json = { workspace = true }

# Hot reload support (shared watcher in flui-hot-reload)
flui-hot-reload = { path = "../flui-hot-reload", version = "0.2.0", optional = true, features = [
    "source-watch",
] }

# Data structures
parking_lot = { workspace = true }

# Platform-specific (Windows memory info)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[features]
default = []

# === Core Features ===
# Performance profiling support
profiling = []

# Timeline/frame history tracking
timeline = []

# === Advanced Features ===
# Hot code reload for development
hot-reload = ["dep:flui-hot-reload"]

# TODO: Add dependencies for these features:
# network-monitor = ["tokio", "tokio-tungstenite"]
# memory-profiler = ["dhat"]
# remote-debug = ["tokio", "tokio-tungstenite"]
# tracing-support = ["tracing-subscriber"]

# === Convenience Features ===
# Enable all features
full = [
    "profiling",
    "timeline",
    "hot-reload",
    # "network-monitor",
    # "memory-profiler",
    # "remote-debug",
    # "tracing-support",
]

[dev-dependencies]

# [[bench]]
# name = "profiler_bench"
# harness = false
