[package]
name = "flui-element"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Element tree and lifecycle management for FLUI framework"
repository.workspace = true
keywords = ["ui", "element", "tree", "flui", "framework"]
categories = ["gui", "data-structures"]

[dependencies]
# FLUI internal dependencies
flui-foundation = { path = "../flui-foundation" }
flui-tree = { path = "../flui-tree" }
flui-view = { path = "../flui-view" }
flui_types = { path = "../flui_types" }
flui_rendering = { path = "../flui_rendering" }

# Core dependencies
bitflags.workspace = true
parking_lot.workspace = true
tracing.workspace = true

# Slab for efficient element storage
slab = "0.4"

# Optional: serde support
serde = { workspace = true, optional = true }

[dev-dependencies]
# Testing utilities

[features]
default = []

# Serialization support
serde = ["dep:serde", "flui-foundation/serde"]

# Enable all features
full = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
