[package]
name = "flui-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-accelerated rendering engine for FLUI using wgpu"
keywords = ["rendering", "gpu", "wgpu", "ui", "graphics"]
categories = ["rendering::engine", "graphics", "gui"]

[features]
default = ["wgpu-backend", "images"]

# === Rendering Backends ===
wgpu-backend = ["dep:wgpu", "dep:glyphon"]
# Future: skia-backend, vello-backend, software-backend

# === wgpu GPU API Selection ===
# Use these to control which GPU APIs wgpu compiles support for
vulkan = ["wgpu-backend", "wgpu/vulkan", "wgpu/wgsl"]
metal = ["wgpu-backend", "wgpu/metal", "wgpu/wgsl"]
dx12 = ["wgpu-backend", "wgpu/dx12", "wgpu/wgsl"]
webgpu = ["wgpu-backend", "wgpu/webgpu", "wgpu/wgsl"]
gles = ["wgpu-backend", "wgpu/gles", "wgpu/wgsl"]

# === Optional Features ===
images = ["dep:image"]
assets = ["dep:flui-assets"]
serialization = ["lyon/serialization"]
lyon-debugger = ["lyon/debugger"]

# === Test Features ===
enable-wgpu-tests = []
disabled-tests = []

[dependencies]
flui-types = { path = "../flui-types" }
flui-painting = { path = "../flui-painting" }
flui-foundation = { path = "../flui-foundation" }
flui-layer = { path = "../flui-layer" }
flui-assets = { path = "../flui-assets", optional = true }

# === GPU Rendering (wgpu backend) ===
wgpu = { workspace = true, default-features = false, optional = true }
raw-window-handle = "0.6"
glyphon = { version = "0.11", optional = true }
bytemuck = { version = "1.24", features = ["derive"] }

# Vector graphics tessellation
lyon = "1.0.16"

# Math for GPU rendering
glam = { version = "0.33", features = ["serde", "bytemuck"] }

# === Utilities ===
pollster = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Image loading (optional)
image = { workspace = true, optional = true }


# === Per-platform default GPU backends ===
# wgpu compiles only the backends named in its Cargo features. These
# target-scoped entries are feature-unified with the base `wgpu` dependency
# above, so every consumer of flui-engine gets the native backend for the
# compile target without opting in. The mapping mirrors
# `Renderer::select_backend()`; the named features above (`vulkan`, `metal`,
# `dx12`, `webgpu`, `gles`) remain available to enable additional backends.
[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["dx12"], optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["metal"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["vulkan"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# fragile-send-sync-non-atomic-wasm: wgpu types are Rc/RefCell-based on the
# WebGPU backend and therefore !Send; this feature marks them Send+Sync, which
# is sound only while the wasm build has no threads (no atomics target
# features). Required by flui-app's Send-bounded frame callbacks.
wgpu = { workspace = true, default-features = false, features = [
    "webgpu",
    "gles",
    "fragile-send-sync-non-atomic-wasm",
], optional = true }

[dev-dependencies]
pollster = { workspace = true }

[lints]
workspace = true
