[package]
name = "flui-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-accelerated rendering engine for FLUI using wgpu"
keywords = ["rendering", "gpu", "wgpu", "ui", "graphics"]
categories = ["rendering::engine", "graphics", "gui"]
readme = "README.md"

[features]
default = ["wgpu-backend", "images"]

# === Rendering Backends ===
wgpu-backend = ["dep:wgpu", "dep:glyphon", "dep:lyon"]
# Future: skia-backend, vello-backend, software-backend

# === wgpu GPU API Selection ===
# Use these to control which GPU APIs wgpu compiles support for
vulkan = ["wgpu-backend", "wgpu/vulkan", "wgpu/wgsl"]
metal = ["wgpu-backend", "wgpu/metal", "wgpu/wgsl"]
dx12 = ["wgpu-backend", "wgpu/dx12", "wgpu/wgsl"]
webgpu = ["wgpu-backend", "wgpu/webgpu", "wgpu/wgsl"]
gles = ["wgpu-backend", "wgpu/gles", "wgpu/wgsl"]

# === Optional Features ===
images = ["dep:image"]
assets = ["dep:flui-assets"]
# lyon sub-features: use the weak-dep `?` so they compose with --no-default-features
# (no wgpu-backend → no lyon → these are silently no-ops rather than errors).
serialization = ["lyon?/serialization"]
lyon-debugger = ["lyon?/debugger"]

# GPU profiling via wgpu-profiler 0.27. OFF by default and excluded from wasm32
# (wgpu-profiler has no wasm support). Requires TIMESTAMP_QUERY adapter support
# at runtime; the engine gracefully no-ops when the adapter lacks it.
gpu-profiler = ["dep:wgpu-profiler"]

# === Test Features ===
enable-wgpu-tests = []

[dependencies]
flui-types = { path = "../flui-types" }
flui-painting = { path = "../flui-painting" }
flui-foundation = { path = "../flui-foundation" }
flui-layer = { path = "../flui-layer" }
flui-assets = { path = "../flui-assets", optional = true }

# === GPU Rendering (wgpu backend) ===
wgpu = { workspace = true, default-features = false, optional = true }
# Shader composition: resolves #import directives at pipeline-init time.
# Only used in the wgpu backend; compile-time feature-gated via the wgpu-backend feature.
naga_oil = { workspace = true }
# `std` is required so `raw_window_handle::HandleError` impls `std::error::Error`
# (the impl is `#[cfg(feature = "std")]` in raw-window-handle 0.6.2); that lets us
# box a `HandleError` directly into `EngineError::SurfaceCreation` via the typed
# `#[source] Box<dyn Error + Send + Sync + 'static>` ctor instead of stringifying.
raw-window-handle = { version = "0.6", features = ["std"] }
glyphon = { version = "0.11", optional = true }
bytemuck = { workspace = true }

# Vector graphics tessellation — optional, pulled in by `wgpu-backend`.
# All lyon use is inside crate::wgpu::tessellator, which is already behind
# the wgpu-backend feature gate, so no call site needs updating.
lyon = { version = "1.0.16", optional = true }

# Math for GPU rendering — workspace base has bytemuck; add serde here for GPU struct serialization
glam = { workspace = true, features = ["serde"] }

# === Utilities ===
pollster = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Image loading (optional)
image = { workspace = true, optional = true }

# GPU profiling (optional, feature-gated, excluded from wasm32 via feature design)
wgpu-profiler = { workspace = true, optional = true }


# === Per-platform default GPU backends ===
# wgpu compiles only the backends named in its Cargo features. These
# target-scoped entries are feature-unified with the base `wgpu` dependency
# above, so every consumer of flui-engine gets the native backend for the
# compile target without opting in. The mapping mirrors
# `Renderer::select_backend()`; the named features above (`vulkan`, `metal`,
# `dx12`, `webgpu`, `gles`) remain available to enable additional backends.
[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["dx12"], optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["metal"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
wgpu = { workspace = true, default-features = false, features = ["vulkan"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# fragile-send-sync-non-atomic-wasm: wgpu types are Rc/RefCell-based on the
# WebGPU backend and therefore !Send; this feature marks them Send+Sync, which
# is sound only while the wasm build has no threads (no atomics target
# features). Required by flui-app's Send-bounded frame callbacks.
wgpu = { workspace = true, default-features = false, features = [
    "webgpu",
    "gles",
    "fragile-send-sync-non-atomic-wasm",
], optional = true }

[build-dependencies]
# Generates Rust bindings from gamma.wgsl in build.rs (P1 pilot).
# Not compiled into the crate binary.
wgsl_bindgen = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "render_throughput"
harness = false

[[bench]]
name = "offscreen_resource_cache"
harness = false
required-features = ["enable-wgpu-tests"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
