[package]
name = "flui-foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Foundation types and utilities for FLUI framework"
documentation = "https://docs.rs/flui-foundation"
readme = "README.md"
keywords = ["ui", "gui", "foundation", "flui"]
categories = ["gui", "data-structures"]

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional dependencies
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
full = ["serde"]
profile = []
serde = ["dep:serde", "dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
