[package]
name = "flui-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Type-safe 2D geometry primitives for FLUI (split from flui-types in D-block PR-C-2)"
repository.workspace = true
keywords = ["geometry", "graphics", "ui", "flui", "math"]
categories = ["graphics", "mathematics"]

# Geometry-specific lint relaxations — mirrors crates/flui-types/Cargo.toml
# pre-split. Math/geometry crates legitimately have many single-char names,
# tolerated truncation casts, similar names (x/y/z), float comparisons (with
# epsilon checks done at higher levels), and wildcard imports in preludes.
[lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
# Inherit workspace-like base
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Workspace-level allows
cast_precision_loss = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Math/geometry crate specifics
many_single_char_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
# Doc lints — will address incrementally
doc_markdown = "allow"
# Geometry code often passes small Copy types by ref for API consistency
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
# Builder-pattern methods returning Self are pervasive
return_self_not_must_use = "allow"
# Float comparisons are intentional in geometry/physics (tolerance-checked elsewhere)
float_cmp = "allow"
# Wildcard imports used in preludes
wildcard_imports = "allow"

[dependencies]
# Numeric traits for generic math (Float, Num, etc.)
num-traits = "0.2"

# Error handling
thiserror = { workspace = true }

# Optional dependencies
serde = { workspace = true, optional = true }

# Linear-algebra backend (Option D, N-geom PR 2): glam provides SIMD-by-default
# matrix/vector math + `bytemuck` Pod derives + the `mint` interop cascade.
# Non-optional — Matrix4 (and, in later PR-2 steps, Vec2/Transform) delegate to it.
glam = { version = "0.30", features = ["bytemuck", "mint"] }

# Pod/Zeroable derives for zero-copy GPU upload (Matrix4 + future vertex structs).
bytemuck = { version = "1", features = ["derive"] }

# mint: zero-cost bridge layer (glam <-> kurbo) for the painting/curve seam.
mint = { version = "0.5", optional = true }

# kurbo: f64 Bézier/curve math for the painting layer. The bridge
# (src/bridges/kurbo.rs) is gated behind `feature = "kurbo"` (PR 3, U8).
kurbo = { version = "0.13", optional = true }

[dev-dependencies]
proptest = "1.11"

[features]
default = []

# Serde support for all geometry types
serde = ["dep:serde"]

# mint interoperability (own-type <-> mint bridges)
mint = ["dep:mint"]

# kurbo interop bridge (flui-geometry/src/bridges/kurbo.rs) — gates Core.2.
kurbo = ["dep:kurbo"]

# Enable all features
full = ["serde", "mint", "kurbo"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
