[package]
name = "flui-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Type-safe 2D geometry primitives for FLUI (split from flui-types in D-block PR-C-2)"
repository.workspace = true
keywords = ["geometry", "graphics", "ui", "flui", "math"]
categories = ["graphics", "mathematics"]

# Geometry-specific lint relaxations — mirrors crates/flui-types/Cargo.toml
# pre-split. Math/geometry crates legitimately have many single-char names,
# tolerated truncation casts, similar names (x/y/z), float comparisons (with
# epsilon checks done at higher levels), and wildcard imports in preludes.
[lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
# Inherit workspace-like base
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Workspace-level allows
cast_precision_loss = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Math/geometry crate specifics
many_single_char_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
# Doc lints — will address incrementally
doc_markdown = "allow"
# Geometry code often passes small Copy types by ref for API consistency
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
# Builder-pattern methods returning Self are pervasive
return_self_not_must_use = "allow"
# Float comparisons are intentional in geometry/physics (tolerance-checked elsewhere)
float_cmp = "allow"
# Wildcard imports used in preludes
wildcard_imports = "allow"

[dependencies]
# Numeric traits for generic math (Float, Num, etc.)
num-traits = "0.2"

# Error handling
thiserror = { workspace = true }

# Optional dependencies
serde = { workspace = true, optional = true }

# Direct glam integration (U14 Option D: Matrix4 / Vec2 / Transform2D
# wrap glam::Mat4 / Vec2 / Affine2 internally). `bytemuck` enables Pod /
# Zeroable interop with the wgpu pipeline; `mint` exposes the cross-math-
# library bridge surface used by the kurbo bridge (U8 follow-up).
glam = { version = "0.30", features = ["bytemuck", "mint"] }

# mint: kept as an explicit re-export so callers can import bridge types
# without depending on glam transitively.
mint = "0.5"

# kurbo: optional 2D-curves bridge (U8). Off by default; Core.2 render-object
# work (Bézier paths, curve flattening, hit-testing) enables `--features kurbo`.
# `mint` feature keeps the conversion surface aligned with glam's mint bridge.
kurbo = { version = "0.13", optional = true, features = ["mint"] }

[dev-dependencies]
proptest = "1.5"

[features]
default = []

# Serde support for all geometry types
serde = ["dep:serde"]

# kurbo bridge (U8): From/TryFrom between flui typed geometry and kurbo's
# f64 curve primitives. Gates Core.2 entry.
kurbo = ["dep:kurbo"]

# Enable all features (glam and mint are now mandatory dependencies per
# U14 Option D, so the `full` set collapses to serde + the kurbo bridge).
full = ["serde", "kurbo"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
