[package]
name = "flui-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Type-safe 2D geometry primitives for FLUI (split from flui-types in D-block PR-C-2)"
repository.workspace = true
readme = "README.md"
keywords = ["geometry", "graphics", "ui", "flui", "math"]
categories = ["graphics", "mathematics"]

# Crate-specific lint relaxations live in src/lib.rs next to the code they
# cover; the manifest inherits [workspace.lints] unmodified.
[lints]
workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }

# Optional dependencies
serde = { workspace = true, optional = true }

# Linear-algebra backend (Option D, N-geom PR 2): glam provides SIMD-by-default
# matrix/vector math + `bytemuck` Pod derives + the `mint` interop cascade.
# Non-optional — Matrix4 (and, in later PR-2 steps, Vec2/Transform) delegate to it.
# Workspace base has bytemuck; add mint here for the interop cascade.
glam = { workspace = true, features = ["mint"] }

# Pod/Zeroable derives for zero-copy GPU upload (Matrix4 + future vertex structs).
bytemuck = { workspace = true }

# kurbo: f64 Bézier/curve math for the painting layer. The bridge
# (src/bridges/kurbo.rs) is gated behind `feature = "kurbo"` (PR 3, U8).
kurbo = { version = "0.13", optional = true }

[dev-dependencies]

[features]
default = []

# Serde support for all geometry types
serde = ["dep:serde"]

# mint interoperability — glam already enables mint via features = ["mint"];
# this feature flag is kept for API compat (flui-types/mint forwards here).
mint = []

# kurbo interop bridge (flui-geometry/src/bridges/kurbo.rs) — gates Core.2.
kurbo = ["dep:kurbo"]

# Enable all features
full = ["serde", "mint", "kurbo"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
