[package]
name = "flui-hot-reload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hot-reload support for FLUI scene plugins via dynamic library loading"

[features]
default = []
app-plugin = ["dep:flui-view", "dep:flui-rendering", "dep:flui-types", "dep:parking_lot"]

[dependencies]
flui-layer = { path = "../flui-layer" }
flui-view = { path = "../flui-view", optional = true }
flui-rendering = { path = "../flui-rendering", optional = true }
flui-types = { path = "../flui-types", optional = true }
parking_lot = { workspace = true, optional = true }
tracing = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[lints]
workspace = true
