[package]
name = "flui-hot-reload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hot-reload support for FLUI scene plugins via dynamic library loading"

[features]
default = []
app-plugin = ["dep:flui-view", "dep:flui-rendering", "dep:flui-types", "dep:parking_lot"]
# Layer 1: debounced source watching for `flui-cli` / `flui-devtools`
source-watch = ["dep:notify-debouncer-mini"]

[dependencies]
flui-layer = { path = "../flui-layer", version = "0.2.0" }
notify-debouncer-mini = { version = "0.5", optional = true }
flui-view = { path = "../flui-view", version = "0.2.0", optional = true }
flui-rendering = { path = "../flui-rendering", version = "0.2.0", optional = true }
flui-types = { path = "../flui-types", version = "0.2.0", optional = true }
parking_lot = { workspace = true, optional = true }
tracing = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[lints]
workspace = true
