[package]
name = "flui-interaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Event routing, interaction handling, and gesture recognition for FLUI"
keywords = ["gui", "ui", "events", "gestures", "interaction"]

[dependencies]
# Flui dependencies
flui-types = { path = "../flui-types" }
flui-foundation = { path = "../flui-foundation" }

# UI Events - Cross-platform input event abstraction (W3C compliant)
ui-events = { workspace = true }
cursor-icon = { workspace = true }

# Synchronization & Concurrency
parking_lot = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }

# Collections (optimized for small sizes)
smallvec = { workspace = true }
bitflags = { workspace = true }

# Async utilities
futures = { workspace = true }

# Logging
tracing = { workspace = true }
dpi = "0.1.2"

# Async runtime
tokio = { workspace = true, features = ["time", "sync", "macros", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = []

# Serialization support (if needed in the future)
serde = ["flui-types/serde"]
