[package]
name = "flui-interaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Event routing, interaction handling, and gesture recognition for FLUI"
keywords = ["gui", "ui", "events", "gestures", "interaction"]

[dependencies]
# Flui dependencies
flui-types = { path = "../flui-types", version = "0.2.0" }
flui-foundation = { path = "../flui-foundation", version = "0.2.0" }

# UI Events - Cross-platform input event abstraction (W3C compliant)
ui-events = { workspace = true }
cursor-icon = { workspace = true }

# Synchronization & Concurrency
parking_lot = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }

# Collections (optimized for small sizes)
smallvec = { workspace = true }

# Logging
tracing = { workspace = true }
dpi = "0.1.2"

# Async runtime
tokio = { workspace = true, features = ["time", "sync", "macros", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
# `tracing-subscriber` is a dev-only dependency — the observability tests
# install a `fmt::TestWriter` subscriber to exercise span emission on hot
# paths. End users configure their subscriber at the app boundary via
# `flui_foundation::log::Logger`, not via this crate.
tracing-subscriber = { workspace = true }
# Criterion — hot-path regression guards. Four benches cover VelocityTracker
# (per-pointer-move), GestureArena (per-pointer-up), TapGestureRecognizer
# (per-pointer-event), and PointerEventResampler (per-raw-input). Each follows
# the workspace benchmark template at
# `rust-studio/.../templates/benchmark-report.md`.
criterion = { workspace = true }
# Property tests for the pure-math substrate (LSQ solver, velocity tracker).
# Same version as the rest of the workspace (flui-types / flui-geometry).
proptest = "1.5"
# Bench fixtures use the `make_*_event` test helpers which are gated
# behind the `testing` feature (they're not part of the release API).
flui-interaction = { path = ".", version = "0.2.0", features = ["testing"] }

[[bench]]
name = "velocity_tracker_bench"
harness = false

[[bench]]
name = "gesture_arena_bench"
harness = false

[[bench]]
name = "tap_detector_bench"
harness = false

[[bench]]
name = "pointer_resampler_bench"
harness = false

[features]
default = []

# Gates the `testing/` submodule (gesture recording, replay, builders)
# plus `PointerEventData` / `PointerEventKind` / `make_*_event` compat
# helpers from `events.rs`. Off by default — opt in via dev-dependencies
# or downstream `flui-interaction = { features = ["testing"] }`.
# Auto-enabled in test builds via `cfg(any(test, feature = "testing"))`.
testing = []

# Serialization support (if needed in the future)
serde = ["flui-types/serde"]

[lints]
workspace = true
